# ZipEase

./: .gitignore  GEMINI.md  README.md  ZipEase.slnx  build-plugin-pack.ps1  handoverbook.md
.github/workflows/: release.yml
ZipEase.Core/: Cargo.toml  README.md
ZipEase.Core/plugin-7za-com/: Cargo.toml  plugin.json
ZipEase.Core/plugin-7za-com/src/: main.rs
ZipEase.Core/plugin-ace/: plugin_ace.py
ZipEase.Core/plugin-arj/: plugin_arj.py
ZipEase.Core/plugin-lz4/: Cargo.toml  plugin.json
ZipEase.Core/plugin-lz4/src/: main.rs
ZipEase.Core/plugin-zstd/: Cargo.toml
ZipEase.Core/plugin-zstd/src/: main.rs
ZipEase.Core/src/: lib.rs
ZipEase.Core/src/error/: mod.rs  storage.rs  types.rs
ZipEase.Core/src/extract/: encoding.rs  mod.rs  sevenz.rs  sevenzadll.rs  smart.rs  tar.rs  zip.rs
ZipEase.Core/src/ffi/: error.rs  extract.rs  list.rs  lock.rs  mod.rs
ZipEase.Core/src/lock/: handle.rs  manager.rs  mod.rs
ZipEase.Core/src/platform/: mod.rs  windows.rs
ZipEase.Core/tests/: error_property_tests.rs  error_tests.rs  ffi_integration_tests.rs  handle_tests.rs  lock_manager_tests.rs  platform_tests.rs  sevenz_fix_tests.rs  zip_encoding_tests.rs
ZipEase.Core/tests/integration/: mod.rs
ZipEase.Core/tests/property/: mod.rs
ZipEase.Core/tests/unit/: error_tests.rs  handle_tests.rs  lock_manager_tests.rs  mod.rs
ZipEase.Core/zipease-compress/: Cargo.toml
ZipEase.Core/zipease-compress/src/: lib.rs
ZipEase.Core/zipease-compress/src/compress/: mod.rs  sevenz.rs  smart.rs  tar_gz.rs  zip.rs
ZipEase.Core/zipease-compress/src/ffi/: compress.rs
ZipEase.Core/zipease-compress/tests/: compress_bugfix_pbt.rs  compression_pbt.rs
ZipEase.Core/zipease-core/: Cargo.toml  README.md
ZipEase.Core/zipease-core/src/: lib.rs
ZipEase.Core/zipease-core/src/ffi/: error.rs  lock.rs  mod.rs
ZipEase.Core/zipease-core/src/lock/: handle.rs  manager.rs  mod.rs
ZipEase.Core/zipease-core/src/platform/: mod.rs  windows.rs
ZipEase.Core/zipease-core/tests/: error_property_tests.rs  error_tests.rs  ffi_integration_tests.rs  handle_tests.rs  lock_manager_tests.rs  lock_property_tests.rs  platform_tests.rs
ZipEase.Core/zipease-extract/: Cargo.toml
ZipEase.Core/zipease-extract/src/: batch.rs  lib.rs  logging.rs
ZipEase.Core/zipease-extract/src/extract/: bomb_detector.rs  cab.rs  iso.rs  mod.rs  preview.rs  rar.rs  sevenz.rs  sevenzadll.rs  smart.rs  tar.rs  zip.rs
ZipEase.Core/zipease-extract/src/extract/sevenzadll/: backend.rs  callback.rs  mod.rs  stream.rs  types.rs
ZipEase.Core/zipease-extract/src/ffi/: batch.rs  extract.rs  list.rs  lock_detector.rs  mod.rs  notify.rs  repair.rs  search.rs  trash.rs
ZipEase.Core/zipease-extract/src/lock_detector/: mod.rs
ZipEase.Core/zipease-extract/src/notify/: toast.rs
ZipEase.Core/zipease-extract/src/repair/: mod.rs  models.rs  path_gen.rs  rar_repairer.rs  rar_scanner.rs  zip_repairer.rs  zip_scanner.rs
ZipEase.Core/zipease-extract/src/search/: mod.rs  pattern.rs
ZipEase.Core/zipease-extract/src/trash/: mod.rs
ZipEase.Core/zipease-extract/tests/: archive_entry_pbt.rs  batch_integration.rs  batch_pbt.rs  bomb_detector_pbt.rs  bomb_detector_tests.rs  ffi_extract_tests.rs  ffi_helpers_pbt.rs  lock_detector_pbt.proptest-regressions  lock_detector_pbt.rs  password_pbt.rs  path_safety_tests.rs  preview_pbt.rs  progress_integration_tests.rs  repair_pbt.rs  repair_unit_tests.rs  routing_tests.rs  search_pbt.rs  search_unit_tests.rs  sevenz_fix_tests.rs  sevenz_size_bugfix_pbt.rs  sevenz_size_preservation_pbt.rs  sevenzadll_tests.rs  toast_pbt.proptest-regressions  toast_pbt.rs  trash_pbt.rs  zip_encoding_pbt.rs  zip_encoding_tests.rs  zip_encoding_unit_tests.rs
ZipEase.Core/zipease-extract/tests/fixtures/: README.md
ZipEase.Core/zipease-preview/: Cargo.toml
ZipEase.Core/zipease-preview/src/: cache.rs  decoder.rs  error.rs  ffi.rs  image_format.rs  lib.rs  magic_bytes.rs  natural_sort.rs  temp.rs  thumbnail.rs
ZipEase.Core/zipease-preview/tests/: cache_capacity_pbt.rs  cache_roundtrip_pbt.rs  image_format_pbt.rs  magic_bytes_pbt.rs  natural_sort_pbt.rs  navigation_filter_pbt.rs  rgba_buffer_pbt.rs  safe_join_pbt.rs  size_guard_pbt.rs  thumbnail_pbt.rs
ZipEase.Core/zipease-shared/: Cargo.toml
ZipEase.Core/zipease-shared/src/: error.rs  ffi_helpers.rs  lib.rs
ZipEase.ShellExtension/: ArchiveExtensions.cs  ComInterfaces.cs  CommandBase.cs  CompressCommand.cs  ExtractCommand.cs  LocalizedStrings.cs  ZipEase.ShellExtension.csproj
ZipEase.ShellExtension.Tests/: AppliesToPropertyTests.cs  AppxManifestPropertyTests.cs  ArchiveExtensionPropertyTests.cs  ArchiveExtensionsUnitTests.cs  CommandLineConstructionPropertyTests.cs  CommandLineParserUnitTests.cs  CommandLineParsingPropertyTests.cs  ExceptionSafetyPropertyTests.cs  LocalizationPropertyTests.cs  LocalizedStringsUnitTests.cs  PlaceholderTests.cs  RegistryIntegrationTests.cs  StrategyDetectionPropertyTests.cs  ZipEase.ShellExtension.Tests.csproj
ZipEase.UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ZipEase.UI.csproj  app.manifest
ZipEase.UI.Tests/: AppSettingsThemingTests.cs  BackdropSwitcherTests.cs  BatchExtractionTests.cs  ExtractionManagerTests.cs  IconResolverTests.cs  IntegrationTests.cs  MockArchivePreviewService.cs  SettingsViewModelThemingTests.cs  ThemeLoaderTests.cs  ThemingIntegrationTests.cs  ThemingPropertyTests.cs  ThumbnailServiceTests.cs  ViewModelStateTests.cs  ZipEase.UI.Tests.csproj  ZoomPanServiceTests.cs
ZipEase.UI/Core/: AppSettings.cs  ArchiveEntry.cs  ArchiveEntryViewModel.cs  ArchivePreviewService.cs  BackdropSwitcher.cs  (+36 more)
packaging/: AppxManifest.xml  build-sparse-msix.ps1
(+11 files in other folders)
