[package]
name = "zipease_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zipease_core"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ole",
    "Win32_System_LibraryLoader",
] }
zip = "2.1.3"
tar = "0.4.40"
sevenz-rust = "0.6.1"
libloading = "0.8"
encoding_rs = "0.8.35"
chardetng = "0.1.1"
libc = "0.2"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.13"

[dependencies.once_cell]
version = "1.19"

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
sevenz-rust = { version = "0.6.1", features = ["compress"] }
