[package]
name = "plugin-lz4"
version = "1.0.0"
edition = "2021"

[dependencies]
zipease-shared = { path = "../zipease-shared" }
zipease-extract = { path = "../zipease-extract" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4_flex = "0.11"

[dev-dependencies]
tempfile = "3.8"

