[package]
name = "plugin-zstd"
version = "1.0.0"
edition = "2021"

[dependencies]
zipease-shared = { path = "../zipease-shared" }
zipease-extract = { path = "../zipease-extract" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.8"

