[package]
name = "zipease-compress"
version = "0.1.0"
edition = "2021"

[dependencies]
zipease-shared = { path = "../zipease-shared" }
zip = "2.1.3"
tar = "0.4.40"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.13"
sevenz-rust = { version = "0.6.1", features = ["compress"] }

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
zipease-extract = { path = "../zipease-extract" }
