[package]
name = "zipease-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zipease_core"

[dependencies]
zipease-shared = { path = "../zipease-shared" }
zipease-extract = { path = "../zipease-extract" }
zipease-compress = { path = "../zipease-compress" }
ctor = "0.2"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ole",
    "Win32_System_LibraryLoader",
] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
zipease-shared = { path = "../zipease-shared" }

[lints]
workspace = true
