[package]
name = "zipease-extract"
version = "0.1.0"
edition = "2021"

[dependencies]
ctor = "0.2"
zipease-shared = { path = "../zipease-shared" }
zip = "2.1.3"
tar = "0.4.40"
sevenz-rust = "0.6.1"
libloading = "0.8"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.13"
encoding_rs = "0.8.35"
chardetng = "0.1.1"
cab = "0.6"
trash = "^3"
wholock = "0.0.1"
unrar = "0.5.8"
crc32fast = "1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
globset = "0.4"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Data_Xml_Dom",
    "UI_Notifications",
] }

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
globset = "0.4"

[lints]
workspace = true
