[package]
name = "zipease-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Ole",
    "Win32_System_LibraryLoader",
] }
once_cell = "1.19"
encoding_rs = "0.8.35"
chardetng = "0.1.1"
